# lazy_id

./: Cargo.toml  README.md  codecov.yml
.github/workflows/: ci.yml
src/: lib.rs
tests/: tests.rs
